turn off some user routes, update swagger
