# puppiesAPI/routes/users.js
@@ -6,13 +6,11 @@ const authController = require('../controllers/authController');
 
 router.get('/', usersController.getAllUsers);
 
-router.get('/:id', usersController.getUserById);
+// router.get('/:id', usersController.getUserById);
 
-router.post('/', usersController.addUser);
+// router.put('/:id', usersController.updateUser);
 
-router.put('/:id', usersController.updateUser);
-
-router.delete('/:id', usersController.deleteUser);
+// router.delete('/:id', usersController.deleteUser);
 
 router.post('/signup', authController.signup);
 router.post('/login', authController.login);
